--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,10 @@ jdk:
 
 
 script:
-  - mvn verify
+  - mvn verify mvn cobertura:cobertura
+
+after_success:
+  - bash <(curl -s https://codecov.io/bash)
 
 before_deploy:
   - echo $GPG_SECRET_KEY | base64 --decode | $GPG_EXECUTABLE --import
