OBG #16 try to forece cobertura

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ jdk:
 
 
 script:
-  - mvn verify mvn cobertura:cobertura
+  - mvn verify cobertura:cobertura
 
 after_success:
   - bash <(curl -s https://codecov.io/bash)
