Using xs2a name prefix

--- a/core/banking-protocol/src/main/resources/application.yml
+++ b/core/banking-protocol/src/main/resources/application.yml
@@ -33,4 +33,4 @@ xs2a-profile:
   aspspScaApproaches:
 
 flowable:
-  process-definition-location-prefix: classpath*:/processes/xs2a/
+  process-definition-location-prefix: classpath*:/processes/**/
