--- a/core/banking-protocol/pom.xml
+++ b/core/banking-protocol/pom.xml
@@ -50,52 +50,10 @@
             <optional>true</optional>
         </dependency>
 
-        <!-- Flowable BPMN -->
         <dependency>
-            <groupId>org.flowable</groupId>
-            <artifactId>flowable-spring-boot-starter-rest</artifactId>
-            <version>${flowable.version}</version>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
         </dependency>
-        <dependency>
-            <groupId>org.flowable</groupId>
-            <artifactId>flowable-spring-boot-starter-actuator</artifactId>
-            <version>${flowable.version}</version>
-        </dependency>
-
-        <!-- XS2A Adapter BEGIN -->
-        <dependency>
-            <groupId>de.adorsys.xs2a.adapter</groupId>
-            <artifactId>xs2a-adapter-rest-impl</artifactId>
-            <version>${xs2a-adapter.version}</version>
-        </dependency>
-
-        <dependency>
-            <groupId>de.adorsys.xs2a.adapter</groupId>
-            <artifactId>xs2a-adapter-service-api</artifactId>
-            <version>${xs2a-adapter.version}</version>
-        </dependency>
-
-        <dependency>
-            <groupId>de.adorsys.xs2a.adapter</groupId>
-            <artifactId>xs2a-adapter-service-loader</artifactId>
-            <version>${xs2a-adapter.version}</version>
-        </dependency>
-
-        <dependency>
-            <groupId>de.adorsys.xs2a.adapter</groupId>
-            <artifactId>xs2a-adapter-aspsp-registry</artifactId>
-            <version>${xs2a-adapter.version}</version>
-        </dependency>
-
-        <!-- adapters -->
-
-        <dependency>
-            <groupId>de.adorsys.xs2a.adapter</groupId>
-            <artifactId>adapters</artifactId>
-            <version>${xs2a-adapter.version}</version>
-            <type>pom</type>
-        </dependency>
-        <!-- XS2A Adapter END -->
 
         <!-- Test only dependencies -->
         <dependency>
