--- a/core/banking-protocol/pom.xml
+++ b/core/banking-protocol/pom.xml
@@ -78,6 +78,7 @@
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter</artifactId>
+            <version>${jupiter.version}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
@@ -107,6 +108,12 @@
             <artifactId>bcprov-jdk15on</artifactId>
             <version>1.64</version>
             <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.jetbrains</groupId>
+            <artifactId>annotations</artifactId>
+            <version>${jetbrains.annotations.version}</version>
         </dependency>
 
     </dependencies>
