--- a/core/banking-protocol/pom.xml
+++ b/core/banking-protocol/pom.xml
@@ -106,6 +106,12 @@
             <artifactId>jsonassert</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.assertj</groupId>
+            <artifactId>assertj-core</artifactId>
+            <scope>test</scope>
+            <version>${assertj.version}</version>
+        </dependency>
 
         <!-- BouncyCastle to generate P12 keystores -->
         <dependency>
