--- a/core/banking-protocol/pom.xml
+++ b/core/banking-protocol/pom.xml
@@ -121,6 +121,11 @@
             <scope>test</scope>
         </dependency>
 
+        <dependency>
+            <groupId>org.liquibase</groupId>
+            <artifactId>liquibase-core</artifactId>
+        </dependency>
+
     </dependencies>
 </project>
 
