--- a/fintech-ui/package.json
+++ b/fintech-ui/package.json
@@ -8,7 +8,7 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "format:fix": "pretty-quick 'fintech-ui/**/*'",
+    "format:fix": "pretty-quick --pattern 'fintech-ui/**/*'",
     "format:fix:precommit": "pretty-quick --staged --pattern 'fintech-ui/**/*'"
   },
   "private": true,
