fix branch name

--- a/.travis.yml
+++ b/.travis.yml
@@ -29,19 +29,19 @@ deploy:
     skip_cleanup: true
     script: bash scripts/deploy_openshift.sh
     on:
-      branch: OBG-7_DocumentationFramework
+      branch: feature/OBG-7_DocumentationFramework
 #      branch: develop
 
   - provider: script
     skip_cleanup: true
     script: bash scripts/deploy_doc.sh
     on:
-#      branch: OBG-7_DocumentationFramework
+#      branch: feature/OBG-7_DocumentationFramework
       tags: true
 
   - provider: script
     skip_cleanup: true
     script: bash scripts/deploy_javadoc.sh
     on:
-#      branch: OBG-7_DocumentationFramework
-      tags: true
+      branch: feature/OBG-7_DocumentationFramework
+#      tags: true
