--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,13 @@ language: java
 jdk:
   - openjdk8
 
+env:
+  global:
+    - OPENSHIFT_REGISTRY="openshift-registry.adorsys.de"
+    - OPENSHIFT_NAMESPACE="open-banking-gateway-dev"
+    - IMAGE_TPP_BANK_SEARCH_API="tpp-bank-search-api"
+    - OPENSHIFT_TPP_BANK_SEARCH_API="${OPENSHIFT_REGISTRY}/${OPENSHIFT_NAMESPACE}/${IMAGE_TPP_BANK_SEARCH_API}"
+
 script:
   - mvn verify cobertura:cobertura
 
