--- a/core/banking-protocol/src/test/resources/application-test-one-time-postgres-disk-volume.yml
+++ b/core/banking-protocol/src/test/resources/application-test-one-time-postgres-disk-volume.yml
@@ -3,3 +3,4 @@ spring:
     url: jdbc:tc:postgresql:12:////open_banking?TC_DAEMON=true&TC_INITSCRIPT=init.sql
     username: postgres
     password: docker
+    driver-class-name: org.testcontainers.jdbc.ContainerDatabaseDriver
