MacOS can't use host network. Using more `crossplatform` solution

--- a/sandbox-test/e2e-tests/src/test/resources/sandbox/application-test-online-banking-ui.yml
+++ b/sandbox-test/e2e-tests/src/test/resources/sandbox/application-test-online-banking-ui.yml
@@ -1,2 +1,3 @@
+port: ${common.apps.local.onlinebankingui.port}
 env:
-  ONLINE_BANKING_SERVER_URL: ${common.apps.mapping.onlinebanking}
+  ONLINE_BANKING_SERVER_URL: http://${dockerHost}:${common.apps.local.onlinebanking.port}
