--- a/.travis.yml
+++ b/.travis.yml
@@ -30,15 +30,15 @@ deploy:
     skip_cleanup: true
     script: bash scripts/deploy_openshift.sh
     on:
-      branch: feature/OBG-7_DocumentationFramework
-#      branch: develop
+#      branch: feature/OBG-7_DocumentationFramework
+      branch: develop
 
   - provider: script
     skip_cleanup: true
     script: bash scripts/deploy_doc.sh
     on:
-#      branch: feature/OBG-7_DocumentationFramework
-      tags: true
+      branch: feature/OBG-7_DocumentationFramework
+#      tags: true
 
   - provider: script
     skip_cleanup: true
