--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,20 +1,19 @@
 site_name: Open Banking Gateway Documentation
 nav:
-  - Home: ../README.md
+  - Home: README.md
   - "Architecture":
-    - architecture/README.md
+    - "Login with FinTech Application": architecture/1-loginWithFinTech.md
     - "Search bank": architecture/2-searchBank.md
-    - architecture/1-loginWithFinTech.md
-    - architecture/3-selectBank.md
-    - architecture/4-initiateAisConsent.md
-    - architecture/5-redirectPsuToConsentAPI.md
-    - architecture/5a-psuAuthEmbeddedConsent.md
-    - architecture/5b-psuAuthRedirectConsent.md
-    - architecture/6-consume_api.md
-    - architecture/dictionary.md
-    - architecture/drafts/README.md
-  - roadmap.md
-  - ContributionGuidelines.md
-  - releasenotes.md
-  - version_policy.md
+    - "Select bank": architecture/3-selectBank.md
+    - "List of Transactions": architecture/4-initiateAisConsent.md
+    - "Redirect to Consent Authorization API": architecture/5-redirectPsuToConsentAPI.md
+    - "Authorize Consent Embedded Approach": architecture/5a-psuAuthEmbeddedConsent.md
+    - "Authorize Consent Redirect Approach": architecture/5b-psuAuthRedirectConsent.md
+    - "Consume Service": architecture/6-consume_api.md
+    - "Dictionary": architecture/dictionary.md
+    - "Draft": architecture/drafts/README.md
+  - "Roadmap": roadmap.md
+  - "Contribution guidelines": ContributionGuidelines.md
+  - "Release notes": releasenotes.md
+  - "Version Policy": version_policy.md
 theme: readthedocs
