--- a/opba-banking-rest-api/pom.xml
+++ b/opba-banking-rest-api/pom.xml
@@ -5,12 +5,12 @@
 	<parent>
 		<groupId>de.adorsys.opba</groupId>
 		<artifactId>open-banking-gateway</artifactId>
-		<version>0.1-SNAPSHOT</version>
+		<version>0.1</version>
 		<relativePath>../pom.xml</relativePath>
 	</parent>
 
 	<artifactId>opba-banking-rest-api</artifactId>
-	<version>0.1-SNAPSHOT</version>
+	<version>0.1</version>
 	<name>Banking embeded rest API</name>
 
 	<properties>
