--- a/opba-consent-rest-api/pom.xml
+++ b/opba-consent-rest-api/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <groupId>de.adorsys.opba</groupId>
     <artifactId>open-banking-gateway</artifactId>
-    <version>0.1-SNAPSHOT</version>
+    <version>0.1</version>
     <relativePath>../pom.xml</relativePath>
   </parent>
 
